--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -1,4 +1,4 @@
-section {
+section.search-bar {
   background: transparent;
   padding: 20px;
   border-radius: 6px;
